need to add image display